bin_PROGRAMS = jikespg

jikespg_SOURCES = ctabs.c \
                  globals.c \
                  lpgparse.c \
                  lpgutil.c \
                  main.c \
                  mkfirst.c \
                  mkred.c \
                  mkstates.c \
                  partset.c \
                  ptables.c \
                  remsp.c \
                  resolve.c \
                  spacetab.c \
                  timetab.c

noinst_HEADERS = common.h \
                 lpgact.h \
                 lpgact.c \
                 lpgdcl.h \
                 lpgdef.h \
                 lpgparse.h \
                 lpgprs.h \
                 lpgsym.h

