bin_PROGRAMS = jikespg

jikespg_SOURCES = ctabs.c \
                  globals.c \
                  lpgparse.c \
                  lpgutil.c \
                  main.c \
                  mkfirst.c \
                  mkred.c \
                  mkstates.c \
                  partset.c \
                  remsp.c

noinst_HEADERS = common.h \
                 lpgact.h \
                 lpgact.c \
                 lpgdcl.h \
                 lpgdef.h \
                 lpgprs.h \
                 lpgsym.h

